<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout style="@style/introduction_layout">

        <ImageView
            android:src="@drawable/home_img"
            android:alpha="0.3"
            android:contentDescription="@string/introduction_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <TextView
            android:text="@string/home_introduction_text"
            style="@style/introduction_text" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Home">

        <LinearLayout
            android:id="@+id/home_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/keyboards"
                style="@style/home_item_style_layout">

                <ImageView
                    android:id="@+id/image_keyboard"
                    app:srcCompat="@drawable/keyboard"
                    style="@style/home_item_style_img"
                    android:contentDescription="@string/keyboards_description"/>

                <TextView
                    android:id="@+id/keyboard_textView"
                    android:text="@string/keyboard_text"
                    style="@style/home_item_style_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/strings"
                style="@style/home_item_style_layout">

                <ImageView
                    android:id="@+id/image_strings"
                    app:srcCompat="@drawable/violin"
                    style="@style/home_item_style_img"
                    android:contentDescription="@string/strings_description"/>

                <TextView
                    android:id="@+id/strings_textView"
                    android:text="@string/strings_text"
                    style="@style/home_item_style_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/percussion"
                style="@style/home_item_style_layout">

                <ImageView
                    android:id="@+id/image_percussion"
                    app:srcCompat="@drawable/percussion"
                    style="@style/home_item_style_img"
                    android:contentDescription="@string/percussion_description"/>

                <TextView
                    android:id="@+id/percussion_textView"
                    android:text="@string/percussion_text"
                    style="@style/home_item_style_text" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>